// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderCell renders default styling 1`] = `
<th
  className="c-table__row__cell "
  data-garden-id="tables.header_cell"
  data-garden-version="version"
/>
`;

exports[`HeaderCell renders menu styling if provided 1`] = `
<th
  className="c-table__row__cell c-table__row__cell--overflow "
  data-garden-id="tables.header_cell"
  data-garden-version="version"
/>
`;

exports[`HeaderCell renders minimum styling if provided 1`] = `
<th
  className="c-table__row__cell c-table__row__cell--min "
  data-garden-id="tables.header_cell"
  data-garden-version="version"
/>
`;

exports[`HeaderCell renders truncation styling if provided 1`] = `
<th
  className="c-table__row__cell c-table__row__cell--truncate "
  data-garden-id="tables.header_cell"
  data-garden-version="version"
/>
`;
